objects/Training_Session__c.object
<CustomObject>
    <fields>
        <fullName>Area_Of_Interest__c</fullName>
        <description>Area of Interest</description>
        <inlineHelpText>Area of Interest</inlineHelpText>
        <label>Area Of Interest</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Of_Training_Days__c</fullName>
        <description>Number Of Training Days</description>
        <inlineHelpText>Number Of Training Days</inlineHelpText>
        <label>Number Of Training Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity relation</description>
        <inlineHelpText>Opportunity relation</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Training Sessions</relationshipLabel>
        <relationshipName>Training_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opt_Options__c</fullName>
        <description>Opt Options</description>
        <inlineHelpText>Opt Options</inlineHelpText>
        <label>Opt Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Interest__c</fullName>
        <label>Primary Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reading</fullName>
                </value>
                <value>
                    <fullName>Writing</fullName>
                </value>
                <value>
                    <fullName>Drawing</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Interest__c</fullName>
        <label>Secondary Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Primary_Interest__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fantasy</fullName>
                </value>
                <value>
                    <fullName>Fiction</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Modern Art</fullName>
                </value>
                <value>
                    <fullName>Paint</fullName>
                </value>
                <value>
                    <fullName>Crayon</fullName>
                </value>
                <value>
                    <fullName>Pencil Shading</fullName>
                </value>
                <value>
                    <fullName>Classical</fullName>
                </value>
                <value>
                    <fullName>Rock</fullName>
                </value>
                <value>
                    <fullName>Pop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Training Session</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Training Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>